<resources>
    <string name="app_name">StoryKU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum eros nisl, id pulvinar mauris eleifend ut. Praesent sollicitudin odio turpis, eget ultrices odio congue et. Vivamus a orci ante. Nullam condimentum nisl non ante hendrerit, ac ultricies mi hendrerit.</string>
    <string name="hello">Hello, </string>
    <string name="hello_with_emot">Hello 👋, </string>
    <string name="name_user">Name User</string>
    <string name="add_post_content">Add post content</string>
    <string name="back_to_home_page">back to home page</string>
    <string name="name">name user</string>
    <string name="date_create_story">26 August 2023</string>
    <string name="new_post">new post</string>
    <string name="upload_image">Click to change image</string>
    <string name="camera">camera</string>
    <string name="fill_content_hint">please fill your content</string>
    <string name="upload">Upload</string>
    <string name="gallery">gallery</string>
    <string name="welcome_to_storyku">Welcome to StoryKU</string>
    <string name="instruction">Please login and enjoy our feature</string>
    <string name="email">email</string>
    <string name="fill_your_email">fill your email</string>
    <string name="storyku">StoryKU</string>
    <string name="password">password</string>
    <string name="fill_your_password">fill your password</string>
    <string name="login">login</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="name_input">name</string>
    <string name="expand_more_to_menu_logout">expand more to menu logout</string>
    <string name="logout">logout</string>
    <string name="save">save</string>
    <string name="select_language">select language</string>
    <string name="instruction_signup">Please sign up and enjoy our feature</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="not_connect">internet not connected</string>
    <string name="confirm">Confirmation</string>
    <string name="question_logout">are you sure to log out?</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="data_not_empty">data is not empty</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="granted">Permission request granted</string>
    <string name="denied">Permission request denied</string>
    <string name="select_image_from">select image from:</string>
    <string name="content">content:</string>
    <string name="mode_screen">mode screen</string>
    <string name="change_language">change language</string>
    <string name="_1_day_ago">1 day ago</string>
    <string name="username">username</string>
    <string name="error_name_text_field">name cannot be empty</string>
    <string name="error_email_text_field">use email patterns correctly</string>
    <string name="error_password_text_field">the password must not be less than 8 characters</string>
    <string name="set_my_location">Set my location (optional)</string>
</resources>