<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.post.PostFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/button_back"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_to_home_page"
            app:backgroundTint="#D7E6E6E6"
            app:icon="@drawable/ic_arrow_back"
            app:iconTint="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/button_back"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/new_post"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <FrameLayout
                android:id="@+id/layout_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_upload"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_marginTop="4dp"
                    android:maxWidth="400dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeImageAppearanceOverlay"
                    app:srcCompat="@drawable/placeholder_image" />

                <Button
                    android:id="@+id/button_change_image"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/white_transparent_57"
                    android:text="@string/upload_image"
                    android:textColor="@color/dim_gray" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/select_image_from"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_image" />

            <Button
                android:id="@+id/button_take_camera"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:text="@string/camera"
                android:textColor="@color/text_color"
                app:elevation="2dp"
                app:layout_constraintEnd_toStartOf="@+id/button_gallery"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_image"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                app:strokeColor="@color/button_color" />

            <Button
                android:id="@+id/button_gallery"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:backgroundTint="@color/yellow_bright"
                android:text="@string/gallery"
                android:textColor="@color/white"
                app:elevation="2dp"
                app:layout_constraintStart_toEndOf="@+id/button_take_camera"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_image"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/content"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_take_camera" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_edit_text_post"
                android:gravity="top|left"
                android:hint="@string/fill_content_hint"
                android:minLines="3"
                android:textColor="@color/text_color"
                android:textColorHint="@color/color_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

            <CheckBox
                android:id="@+id/checkbox_mylocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/set_my_location"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@+id/ed_description" />

            <Button
                android:id="@+id/button_upload"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/button_color"
                android:padding="10dp"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_mylocation"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

            <ProgressBar
                android:id="@+id/progressbar_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>