<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="6dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_create_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/_1_day_ago"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="1"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_content"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="4dp"
        android:maxWidth="400dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeImageAppearanceOverlay"
        app:srcCompat="@drawable/ic_launcher_background" />
</LinearLayout>